[tool.poetry]
authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
]
description = "dude uncomplicated data extraction (For Pyto on iOS)"
documentation = "https://roniemartinez.github.io/dude/"
keywords = [
  "scraping",
]
license = "AGPL-3.0-or-later"
name = "pydude_pyto"
packages = [
  {include = "dude_pyto"},
]
readme = "README.md"
repository = "https://github.com/rapjul/dude_pyto"
version = "0.18.0.5"

[tool.poetry.urls]
"Donate" = "https://github.com/sponsors/roniemartinez"

[tool.poetry.scripts]
dude_pyto = "dude_pyto:cli"

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6.0"
httpx = "^0.22.0"
parsel = "^1.6.0"
# optionals
beautifulsoup4 = {version = "^4.10.0", optional = true}
# braveblock = {version = ">=0.1.13,<0.3.0", optional = true}
cssselect = {version = "^1.1.0", optional = true}
lxml = {version = "^4.8.0", optional = true}
# playwright = {version = "^1.19.0", optional = true}
pyppeteer = {version = "^1.0.2", optional = true}
# selenium-wire = {version = "^4.6.2", optional = true}
# webdriver-manager = {version = "^3.5.3", optional = true}

[tool.poetry.extras]
bs4 = ["beautifulsoup4", "httpx"]
lxml = ["lxml", "cssselect", "httpx"]
parsel = ["parsel", "httpx"]
# playwright = ["playwright"]
pyppeteer = ["pyppeteer"]
# selenium = ["selenium-wire", "webdriver-manager"]

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
black = "^22.3"
isort = "^5.10.1"
mkdocs-material = "^8.2.9"
mkdocstrings = "^0.18.1"
mypy = "^0.942"
pyproject-flake8 = "^0.0.1a4"
pytest = "^7.1.1"
pytest-clarity = "^1.0.1"
pytest-cov = "^3.0.0"
respx = "^0.19.2"
tabulate = {git = "https://github.com/astanin/python-tabulate"}
types-PyYAML = "^6.0.7"

[tool.isort]
atomic = true
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 3
use_parentheses = true

[tool.black]
extend-exclude = """
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/setup.py
"""
include = '\.pyi?$'
line-length = 120
target-version = ['py39']

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "pkg_resources",
]

[tool.flake8]
extend-exclude = """
setup.py,
"""
extend-ignore = "E203"
max-line-length = 120

[tool.pytest.ini_options]
addopts = """\
    --cov=dude_pyto \
    --cov-report=term-missing \
    --cov-report=xml \
    --cov-report=html \
    -vv \
    -x \
    -s \
"""
norecursedirs = ["examples"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
